# just-utils

./: .gitignore  README.md  pyproject.toml
just_utils/: __init__.py  args.py  clean.py  conan.py  inspect.py  manifest.py  version.py
tests/: test_version.py
tests/test_data/: .manifest.yml  CMakeLists.txt  conanfile.py
tests/test_data/include/: version.h
tests/test_data/meta/: meta.yml
