[project]
name = "just_utils"
version = "0.1.4"
description = "Utility functions for Justfiles"
authors = [{ name = "whs31", email = "riazantsev.dl@edu.spbstu.ru" }]
dependencies = [
    "pyyaml",
    "termcolor",
    "alive-progress",
    "semver"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"  # for coverage reports, optional
]